updated git, gitignore, podman, and new passphrase alias

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
-.dotfiles/*
-
 .profile.d/private/
 .profile.d/secrets/
 
 .netrc
-.aws/config
-.vault-token
-.wrangler
+.dotfiles*
+.aws*
+.vault*
+.wrangler*
