More workstation improvements!
* Updated PKL config
* Added whatismyip alias (uses checkip.amazonaws.com)
* Added comments on Docker installation
* Added git completion (duh!!)
* Updated Python config to always use Python3
* Updated tmux config to use named sessions
* Added tmux plugins

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,4 +10,26 @@ set-option -g allow-rename off
 set-option -g visual-bell on
 
 # Lock after 15 minutes
-set -g lock-after-time 60
+set-option -g lock-after-time 1
+
+# Clipboard configuration
+set-option -g copy-command 'pbcopy'
+
+# Mouse mode
+set-option -g mouse on
+
+# PLUGINS
+#
+# Install: https://github.com/tmux-plugins/tpm
+# 
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+
+# Plugin configuration
+set -g @continuum-restore 'on'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
