docker-credentials helper config and comments

--- a/.docker/config.json
+++ b/.docker/config.json
@@ -1,6 +1,5 @@
 {
-	"auths": {},
-	"credsStore": "desktop",
+	"credsStore": "osxkeychain",
 	"currentContext": "desktop-linux",
 	"plugins": {
 		"-x-cli-hints": {
