--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,6 +3,11 @@ unbind C-b
 set -g prefix C-z
 bind C-z send-prefix
 
+# Custom bindings
+bind-key -T prefix \| split-window -h
+bind-key -T prefix \\ split-window -h
+bind-key -T prefix \- split-window
+
 # Some tweaks to the status line
 set-option -g allow-rename off
 
