--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,16 +12,21 @@ bind-key -T prefix \- split-window
 set-option -g allow-rename off
 
 # Bells
-set-option -g visual-bell on
+# set-option -g visual-bell off
 
 # Lock after 15 minutes
-set-option -g lock-after-time 1
+# set-option -g lock-after-time 1
 
 # Clipboard configuration
 set-option -g copy-command 'pbcopy'
 
 # Mouse mode
 set-option -g mouse on
+
+# Default path
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
 
 # PLUGINS
 #
@@ -38,3 +43,6 @@ set -g @continuum-restore 'on'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
+
+# Init the default session
+# new-session -s default
