--- a/.docker/config.json
+++ b/.docker/config.json
@@ -4,6 +4,15 @@
 	"plugins": {
 		"-x-cli-hints": {
 			"enabled": "true"
+		},
+		"debug": {
+			"hooks": "exec"
+		},
+		"scout": {
+			"hooks": "pull,buildx build"
 		}
+	},
+	"features": {
+		"hooks": "true"
 	}
 }
