--- a/.granted/config
+++ b/.granted/config
@@ -2,7 +2,7 @@ DefaultBrowser = "FIREFOX"
 CustomBrowserPath = "/Applications/Firefox.app/Contents/MacOS/firefox"
 CustomSSOBrowserPath = "/Applications/Firefox.app/Contents/MacOS/firefox"
 Ordering = ""
-ExportCredentialSuffix = ""
+ExportCredentialSuffix = "granted"
 ExportCredsToAWS = true
 DefaultExportAllEnvVar = true
 
